src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

*{
  box-sizing: border-box;
}
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.text{
  font-size: 1.2rem;
  font-weight: 400;
  color:#333;
}


.image-hero{
  transform: rotate(0deg) !;
top:0;
left: -500px;
top:0


}

@media screen and  (max-width:768px) {
  .image-hero{
    transform: rotate(-90deg);
   top:200px;
  left: 0;
  
  }

}

